# worles_altair_theme

./: .gitignore  LICENSE  README.md  dev_requirements.txt  pyproject.toml  theme_notebook.py
worles_altair_theme/: __init__.py
